--- a/index.html
+++ b/index.html
@@ -686,8 +686,7 @@ how to remove the virtical space around the range input in IE*/
 	display:inline-block
 }
 
-/* ---- particles.js container ---- */
-/* #particles-js{ position:absolute; width: 100%; height: 100%; background-color: #0f0f0f; background-image: url(""); background-repeat: no-repeat; background-size: 10%; background-position: 50% 50%; } */
+/* ---- particles.js container ---- */ #particles-js{ position:absolute; width: 100%; height: 100%; background-color: rgba(0,0,0,0); background-image: url(""); background-repeat: no-repeat; background-size: 10%; background-position: 50% 50%; }
 /* twine-user-stylesheet #2: "click-to-proceed.css" */
 .macro-ctp-entry {
 	display: inline-block;
@@ -922,12 +921,11 @@ Macro.add('message', {
             .appendTo(this.output);
     }
 });
+
 UIBar.destroy();
 Config.passages.descriptions = true;
 $("<div class='imgbox'><div class='macro-crossfade' data-macro-crossfade-id='windowbox'><img class='macro-crossfade-image' src='images/window.png'><img class='macro-crossfade-image' src='images/window.png'></div></div>").prependTo(document.body);
-// $("<div id='particles-js'></div>").appendTo(document.body);
-// <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
-// particlesJS("particles-js", {"particles":{"number":{"value":150,"density":{"enable":false,"value_area":800}},"color":{"value":"#ffffff"},"shape":{"type":"circle","stroke":{"width":0,"color":"#000000"},"polygon":{"nb_sides":5},"image":{"src":"img/github.svg","width":100,"height":100}},"opacity":{"value":1,"random":true,"anim":{"enable":true,"speed":1,"opacity_min":0,"sync":false}},"size":{"value":1,"random":true,"anim":{"enable":false,"speed":0.05,"size_min":0.3,"sync":false}},"line_linked":{"enable":false,"distance":150,"color":"#ffffff","opacity":0.4,"width":1},"move":{"enable":true,"speed":0.05,"direction":"bottom-left","random":false,"straight":true,"out_mode":"out","bounce":false,"attract":{"enable":false,"rotateX":600,"rotateY":600}}},"interactivity":{"detect_on":"window","events":{"onhover":{"enable":false,"mode":"bubble"},"onclick":{"enable":false,"mode":"repulse"},"resize":true},"modes":{"grab":{"distance":400,"line_linked":{"opacity":1}},"bubble":{"distance":250,"size":0,"duration":2,"opacity":0,"speed":3},"repulse":{"distance":400,"duration":0.4},"push":{"particles_nb":4},"remove":{"particles_nb":2}}},"retina_detect":true});
+$("<div id='particles-js'></div>").appendTo(document.body);
 /* twine-user-script #2: "click-to-proceed.js" */
 (function () {
 	"use strict";
