Improve menu UI

--- a/index.html
+++ b/index.html
@@ -257,6 +257,11 @@ button:disabled {
   transition: all 1s ease-in-out;
 }
 
+.miniUI a {
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
 .multichoice {
   display: flex;
 }
@@ -1548,7 +1553,7 @@ $("<div class='imgbox'><div class='macro-crossfade' data-macro-crossfade-id='win
     &lt;&lt;button &quot;Warnings&quot; &quot;Warnings&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
     &lt;&lt;button &quot;Credits&quot; &quot;Credits&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
   &lt;/div&gt;
-&lt;/div&gt;&lt;div class=&quot;buttons&quot;&gt;&lt;div class=&quot;continue&quot;&gt;&lt;&lt;disable&gt;&gt;&lt;&lt;button &quot;&amp;#8594;&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/disable&gt;&gt;&lt;/div&gt;&lt;div class=&quot;back&quot;&gt;&lt;&lt;disable&gt;&gt;&lt;&lt;button &quot;&amp;#8592;&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/disable&gt;&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="4" name="I" tags="yellow" position="100,100" size="100,100">&lt;&lt;silently&gt;&gt;
+&lt;/div&gt;&lt;div class=&quot;buttons&quot;&gt;&lt;div class=&quot;continue&quot;&gt;&lt;&lt;disable&gt;&gt;&lt;&lt;button &quot;&amp;#8594;&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/disable&gt;&gt;&lt;/div&gt;&lt;div class=&quot;back&quot;&gt;&lt;&lt;disable&gt;&gt;&lt;&lt;button &quot;&amp;#8592;&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/disable&gt;&gt;&lt;/div&gt;&lt;/div&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="4" name="I" tags="yellow story_1" position="100,100" size="100,100">&lt;&lt;silently&gt;&gt;
 /* Initial variables */
   /* Starting audio */
   &lt;&lt;audio church fadeoverto 1 0&gt;&gt;
@@ -1610,12 +1615,12 @@ $("<div class='imgbox'><div class='macro-crossfade' data-macro-crossfade-id='win
         &lt;&lt;next 3s&gt;&gt;&lt;&lt;type 50ms&gt;&gt;&lt;div class=&quot;shake&quot;&gt; //&#39;&#39;I can&#39;t even see your face!&#39;&#39;// &lt;/div&gt;&lt;&lt;/type&gt;&gt;&lt;&lt;next 8s&gt;&gt;&lt;&lt;ctpAdvance $section&gt;&gt;
       &lt;&lt;/timed&gt;&gt;
     &lt;&lt;ctpNext t8n&gt;&gt;
-      &lt;span class=&quot;c&quot;&gt;//Dios mio, hijo.//&lt;/span&gt;[[Jump Test]]
+      &lt;span class=&quot;c&quot;&gt;//Dios mio, hijo.//&lt;/span&gt;
 
         
       
   &lt;&lt;/ctp&gt;&gt;
-&lt;/div&gt;&lt;div class=&quot;buttons&quot;&gt;&lt;div class=&quot;continue&quot;&gt;&lt;&lt;liveblock&gt;&gt;&lt;&lt;disable $continue&gt;&gt;&lt;&lt;button &quot;&amp;#8594;&quot;&gt;&gt;&lt;&lt;ctpAdvance $section&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/disable&gt;&gt;&lt;&lt;/liveblock&gt;&gt;&lt;/div&gt;&lt;div class=&quot;back&quot;&gt;&lt;&lt;liveblock&gt;&gt;&lt;&lt;disable $back&gt;&gt;&lt;&lt;button &quot;&amp;#8592;&quot;&gt;&gt;&lt;&lt;ctpBack $section&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/disable&gt;&gt;&lt;&lt;/liveblock&gt;&gt;&lt;/div&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="5" name="Demo" tags="" position="225,0" size="100,100">&lt;&lt;silently&gt;&gt;
+&lt;/div&gt;&lt;div class=&quot;buttons&quot;&gt;&lt;div class=&quot;continue&quot;&gt;&lt;&lt;liveblock&gt;&gt;&lt;&lt;disable $continue&gt;&gt;&lt;&lt;button &quot;&amp;#8594;&quot;&gt;&gt;&lt;&lt;ctpAdvance $section&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/disable&gt;&gt;&lt;&lt;/liveblock&gt;&gt;&lt;/div&gt;&lt;div class=&quot;back&quot;&gt;&lt;&lt;liveblock&gt;&gt;&lt;&lt;disable $back&gt;&gt;&lt;&lt;button &quot;&amp;#8592;&quot;&gt;&gt;&lt;&lt;ctpBack $section&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/disable&gt;&gt;&lt;&lt;/liveblock&gt;&gt;&lt;/div&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="5" name="Demo" tags="appendix" position="225,0" size="100,100">&lt;&lt;silently&gt;&gt;
 /* Initial variables */
   /* Starting audio */
   &lt;&lt;audio church fadeoverto 1 0&gt;&gt;
@@ -1799,7 +1804,7 @@ $("<div class='imgbox'><div class='macro-crossfade' data-macro-crossfade-id='win
 &lt;div id=&quot;textbox&quot; style=&quot;flex-direction:column;&quot;&gt; 
   &lt;h1 style=&quot;font-size:16px;&quot;&gt;Credits&lt;/h1&gt;&lt;ul&gt;
   &lt;li&gt;Stevie&lt;/li&gt;&lt;li&gt;Other people&lt;/li&gt;&lt;/ul&gt;
-&lt;/div&gt;&lt;div class=&quot;buttons&quot;&gt;&lt;div class=&quot;continue&quot;&gt;&lt;&lt;disable&gt;&gt;&lt;&lt;button &quot;&amp;#8594;&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/disable&gt;&gt;&lt;/div&gt;&lt;div class=&quot;back&quot;&gt;&lt;&lt;button &quot;&amp;#8592;&quot; &quot;Main Menu&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="8" name="Jump Test" tags="yellow" position="975,100" size="100,100">&lt;div id=&quot;textbox&quot;&gt;[[Main Menu]]&lt;/div&gt;&lt;div class=&quot;buttons&quot;&gt;&lt;div class=&quot;continue&quot;&gt;&lt;&lt;liveblock&gt;&gt;&lt;&lt;disable $continue&gt;&gt;&lt;&lt;button &quot;&amp;#8594;&quot;&gt;&gt;&lt;&lt;ctpAdvance $section&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/disable&gt;&gt;&lt;&lt;/liveblock&gt;&gt;&lt;/div&gt;&lt;div class=&quot;back&quot;&gt;&lt;&lt;liveblock&gt;&gt;&lt;&lt;disable $back&gt;&gt;&lt;&lt;button &quot;&amp;#8592;&quot;&gt;&gt;&lt;&lt;ctpBack $section&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/disable&gt;&gt;&lt;&lt;/liveblock&gt;&gt;&lt;/div&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="9" name="PassageFooter" tags="" position="1100,100" size="100,100">&lt;&lt;if not tags().includes(&quot;menu&quot;)&gt;&gt;
+&lt;/div&gt;&lt;div class=&quot;buttons&quot;&gt;&lt;div class=&quot;continue&quot;&gt;&lt;&lt;disable&gt;&gt;&lt;&lt;button &quot;&amp;#8594;&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/disable&gt;&gt;&lt;/div&gt;&lt;div class=&quot;back&quot;&gt;&lt;&lt;button &quot;&amp;#8592;&quot; &quot;Main Menu&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="8" name="Jump Test" tags="yellow appendix" position="975,100" size="100,100">&lt;div id=&quot;textbox&quot;&gt;[[Main Menu]]&lt;/div&gt;&lt;div class=&quot;buttons&quot;&gt;&lt;div class=&quot;continue&quot;&gt;&lt;&lt;liveblock&gt;&gt;&lt;&lt;disable $continue&gt;&gt;&lt;&lt;button &quot;&amp;#8594;&quot;&gt;&gt;&lt;&lt;ctpAdvance $section&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/disable&gt;&gt;&lt;&lt;/liveblock&gt;&gt;&lt;/div&gt;&lt;div class=&quot;back&quot;&gt;&lt;&lt;liveblock&gt;&gt;&lt;&lt;disable $back&gt;&gt;&lt;&lt;button &quot;&amp;#8592;&quot;&gt;&gt;&lt;&lt;ctpBack $section&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/disable&gt;&gt;&lt;&lt;/liveblock&gt;&gt;&lt;/div&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="9" name="PassageFooter" tags="" position="1100,100" size="100,100">&lt;&lt;if not tags().includes(&quot;menu&quot;)&gt;&gt;
 &lt;div class=&quot;miniUI&quot;&gt;&lt;&lt;message &quot;&amp;#9776;&quot; btn&gt;&gt;
     &lt;&lt;link &quot;settings&quot;&gt;&gt;&lt;&lt;script&gt;&gt;UI.settings();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
     &lt;&lt;link &quot;saves&quot;&gt;&gt;&lt;&lt;script&gt;&gt;UI.saves();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
